# MVG_Algorithm

./: CMakeLists.txt  MVG_Algorithm.kdev4  README.md
.kdev4/: MVG_Agorithm.kdev4  MVG_Algorithm.kdev4
include/: essential_matrix.h  fundamental_matrix.h  homography_matrix.h  line_RANSAC.h  triangulation.h
src/: essential_matrix.cpp  fundamental_matrix.cpp  homography_matrix.cpp  line_RANSAC.cpp  triangulation.cpp
test/: main.cpp  test_line_ransac.cpp
